# python_template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: issue_template.md  pull_request_template.md
src/: __main__.py
